--- a/_src/assets/styles/callouts.css
+++ b/_src/assets/styles/callouts.css
@@ -7,7 +7,7 @@
     padding: calc(var(--tw-spacing) * 5) /* 1.25rem = 20px */;
     margin: calc(var(--tw-spacing) * 2) /* 0.5rem = 8px */;
     margin-bottom: calc(var(--tw-spacing) * 5);
-    background-image: url(/assets/img/noise.png);
+    background-image: url(/assets/img/noise.webp);
 }
 
 
